freshrss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: freshrss
        image: lscr.io/linuxserver/freshrss:1.26.3
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "500m"
            memory: "400Mi"
          requests:
            cpu: "200m"
            memory: "100Mi"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: fr-data
          mountPath: /config
      volumes:
      - name: fr-data
        persistentVolumeClaim:
          claimName: fr-data-pvc
